tests/good/44/test.scm
(and (or (= 2 1) (= 3 3)) (and #t #t))