tests/bad/18/test.scm
(if #t (define x 1) 2)